Fixed spacing of icons on the panel headers on the TouchPad

--- a/stylesheets/phnx.css
+++ b/stylesheets/phnx.css
@@ -234,8 +234,8 @@ body.no-gesture {  /* touchpad/emulator */
 	/* total width is 320 */
 	width: 260px;
 	padding-right: 20px;
-	padding-left: 30px;
-	margin-left: 10px;
+	padding-left: 40px;
+	margin-left: 0px;
 
 	float: left;
 }
